Fixed buggy 100vh for mobiles (url bar is also counted into it -> scrolling when is visible)

--- a/static/src/assets/sass/base/_base.scss
+++ b/static/src/assets/sass/base/_base.scss
@@ -22,6 +22,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @include responsive($breakpoint__mobile--mid) {
+        align-items: stretch;
+    }
 }
 
 ::-webkit-scrollbar {
