--- a/static/src/assets/sass/components/_dash.scss
+++ b/static/src/assets/sass/components/_dash.scss
@@ -14,8 +14,8 @@
 
     @include responsive($breakpoint__mobile--mid) {
         max-width: 100%;
+        min-height: 100%;
         margin: 0;
-        min-height: 100vh;
         border-radius: 0;
     }
 
